src/test/resources/cocos/valid/imports/simple/Import Vehicle.sysml
/* (c) https://github.com/MontiCore/monticore */
package 'Import Vehicle'{
  private import 'Symbol Definition'::Vehicle;
  block AlreadyInScope;
}
