src/test/resources/cocos/invalid/imports/withStarAndWithAs/Import Vehicle.sysml
package 'Import Vehicle'{
  import 'Symbol Definition'::* as Car; //Does not make any sense.
  block AlreadyInScope;
}